# src/app/Http/Controllers/API/V1/Auth/LoginController.php
@@ -17,13 +17,13 @@ class LoginController extends BaseController {
   public function login(Request $request): JsonResponse {
     // ユーザーの認証情報（メールアドレスとパスワード）が正しいかを確認しています。
     if (!Auth::attempt(['email' => $request->email, 'password' => $request->password])) { 
-      return $this->sendError('parameter error.', ['error' => 'parameter error'], 400);
+      return $this->sendError('Parameter Error', "The provided email or password is incorrect. Please check your credentials and try again", 400);
     }
 
     $user = Auth::user();
     $data['token'] = $user->createToken('API Access')->plainTextToken;
     $data['userId'] = $user->id;
 
-    return $this->sendResponse('data', $data, 200, 'User Login Successfully.');
+    return $this->sendResponse('data', $data, 200, 'User Login Successfully');
   }
 }
